// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Main Movable changes toValue when snackbar is visible 1`] = `
<Component
  style={
    Object {
      "flex": 1,
    }
  }
>
  <FlatList
    data={
      Array [
        Object {
          "id": "259162c6-8c55-446b-aa4f-cf9a6fcffc2f",
          "questions": Array [
            Object {
              "answer": "A library for managing user interfaces",
              "question": "What is React?",
            },
          ],
          "title": "React",
        },
      ]
    }
    disableVirtualization={false}
    horizontal={false}
    initialNumToRender={10}
    keyExtractor={[Function]}
    maxToRenderPerBatch={10}
    numColumns={1}
    onEndReachedThreshold={2}
    renderItem={[Function]}
    scrollEventThrottle={50}
    updateCellsBatchingPeriod={50}
    windowSize={21}
  />
  <Styled(Component)
    bottom={16}
    right={16}
  >
    <withTheme(Movable)
      toValue={-46}
    >
      <FAB
        handlePress={[Function]}
        primary={false}
      />
    </withTheme(Movable)>
  </Styled(Component)>
  <withTheme(Snackbar)
    onDismiss={[Function]}
    visible={true}
  />
  <ConfirmDialog
    actionCancelText="cancel"
    actionSubmitText="Delete"
    content="This deck and all it cards will be deleted. You can edit this deck if you want to change something."
    handleDismiss={[Function]}
    handleSubmitPress={[Function]}
    title="Delete deck?"
    visible={false}
  />
</Component>
`;

exports[`Main renders properly 1`] = `
<Component
  style={
    Object {
      "flex": 1,
    }
  }
>
  <FlatList
    data={
      Array [
        Object {
          "id": "259162c6-8c55-446b-aa4f-cf9a6fcffc2f",
          "questions": Array [
            Object {
              "answer": "A library for managing user interfaces",
              "question": "What is React?",
            },
          ],
          "title": "React",
        },
      ]
    }
    disableVirtualization={false}
    horizontal={false}
    initialNumToRender={10}
    keyExtractor={[Function]}
    maxToRenderPerBatch={10}
    numColumns={1}
    onEndReachedThreshold={2}
    renderItem={[Function]}
    scrollEventThrottle={50}
    updateCellsBatchingPeriod={50}
    windowSize={21}
  />
  <Styled(Component)
    bottom={16}
    right={16}
  >
    <withTheme(Movable)
      toValue={0}
    >
      <FAB
        handlePress={[Function]}
        primary={false}
      />
    </withTheme(Movable)>
  </Styled(Component)>
  <withTheme(Snackbar)
    onDismiss={[Function]}
    visible={false}
  />
  <ConfirmDialog
    actionCancelText="cancel"
    actionSubmitText="Delete"
    content="This deck and all it cards will be deleted. You can edit this deck if you want to change something."
    handleDismiss={[Function]}
    handleSubmitPress={[Function]}
    title="Delete deck?"
    visible={false}
  />
</Component>
`;
